<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ear_training_exercise_execution_page_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#301D1D"
    tools:context=".earTraining.EarTrainingGuessFunctionExecutionPage">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/currentRoundText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/ear_training_buttons_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="14/20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ear_training_buttons_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21" />

    <Button
        android:id="@+id/button3"
        android:layout_width="85dp"
        android:layout_height="70dp"
        android:backgroundTint="#775757"
        android:text="@string/_3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="85dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#775757"
        android:text="@string/_2"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/button1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="85dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#775757"
        android:text="@string/_1"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ear_training_buttons_guideline" />

    <Button
        android:id="@+id/button7"
        android:layout_width="85dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#775757"
        android:text="@string/_7"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="85dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#775757"
        android:text="@string/_5"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button6"
        android:layout_width="85dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#775757"
        android:text="@string/_6"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button4"
        android:layout_width="85dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#775757"
        android:text="@string/_4"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/earTrainingExecutionPageRepeatNote"
        android:layout_width="130dp"
        android:layout_height="66dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#775757"
        android:text="@string/repeat_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/earTrainingExecutionPageRepeat"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/earTrainingExecutionPageRepeat"
        android:layout_width="130dp"
        android:layout_height="66dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#775757"
        android:text="@string/repeat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/earTrainingExecutionPageRepeatNote" />

    <TextView
        android:id="@+id/successPercText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/_80"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/ear_training_buttons_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/incorrectAnswersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/earTrainingIncorrectAnswers"
        android:textColor="#DD2C00"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ear_training_buttons_guideline"
        app:layout_constraintEnd_toStartOf="@+id/successPercText"
        app:layout_constraintTop_toTopOf="@+id/successPercText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/correctAnswersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/earTrainingCorrectAnswers"
        android:textColor="#00C853"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ear_training_buttons_guideline"
        app:layout_constraintEnd_toStartOf="@+id/incorrectAnswersText"
        app:layout_constraintTop_toTopOf="@+id/incorrectAnswersText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/functionNumberGiantTextView"
        android:layout_width="367dp"
        android:layout_height="527dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="350sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        tools:text="@string/_5" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="357dp"
        android:layout_height="26dp"
        android:layout_marginBottom="8dp"
        android:foregroundTint="#EFE3E3"
        android:progressBackgroundTint="#FFFFFF"
        android:progressTint="#7CF403"
        android:scaleY="3"
        android:scrollbarSize="4dp"
        app:layout_constraintBottom_toTopOf="@+id/earTrainingExecutionPageRepeatNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>